parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     block -> LBRACE statements RBRACE
Rule 5     statement -> VAR ID ASSIGN expression
Rule 6     statement -> ID ASSIGN expression
Rule 7     statement -> PRINT LPAREN expression RPAREN
Rule 8     statement -> IF expression block
Rule 9     statement -> IF expression block ELSE block
Rule 10    statement -> WHILE expression block
Rule 11    statement -> FUNCTION ID LPAREN parameters RPAREN block
Rule 12    statement -> RETURN expression
Rule 13    parameters -> parameters COMMA ID
Rule 14    parameters -> ID
Rule 15    parameters -> <empty>
Rule 16    arguments -> arguments COMMA expression
Rule 17    arguments -> expression
Rule 18    arguments -> <empty>
Rule 19    expression -> ID LPAREN arguments RPAREN
Rule 20    expression -> expression PLUS expression
Rule 21    expression -> expression MINUS expression
Rule 22    expression -> expression TIMES expression
Rule 23    expression -> expression DIVIDE expression
Rule 24    expression -> expression LT expression
Rule 25    expression -> expression GT expression
Rule 26    expression -> expression LTE expression
Rule 27    expression -> expression GTE expression
Rule 28    expression -> expression EQUALS expression
Rule 29    expression -> NUMBER
Rule 30    expression -> STRING
Rule 31    expression -> ID
Rule 32    expression -> LPAREN expression RPAREN
Rule 33    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 5 6
COMMA                : 13 16
DIVIDE               : 23
ELSE                 : 9
EQUALS               : 28
FUNCTION             : 11
GT                   : 25
GTE                  : 27
ID                   : 5 6 11 13 14 19 31
IF                   : 8 9
LBRACE               : 4
LPAREN               : 7 11 19 32
LT                   : 24
LTE                  : 26
MINUS                : 21
NUMBER               : 29
PLUS                 : 20
PRINT                : 7
RBRACE               : 4
RETURN               : 12
RPAREN               : 7 11 19 32
STRING               : 30
TIMES                : 22
VAR                  : 5
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

arguments            : 16 19
block                : 8 9 9 10 11
empty                : 
expression           : 5 6 7 8 9 10 12 16 17 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 32
parameters           : 11 13
program              : 0
statement            : 2 3
statements           : 1 2 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (5) statement -> . VAR ID ASSIGN expression
    (6) statement -> . ID ASSIGN expression
    (7) statement -> . PRINT LPAREN expression RPAREN
    (8) statement -> . IF expression block
    (9) statement -> . IF expression block ELSE block
    (10) statement -> . WHILE expression block
    (11) statement -> . FUNCTION ID LPAREN parameters RPAREN block
    (12) statement -> . RETURN expression

    VAR             shift and go to state 4
    ID              shift and go to state 5
    PRINT           shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FUNCTION        shift and go to state 9
    RETURN          shift and go to state 10

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (5) statement -> . VAR ID ASSIGN expression
    (6) statement -> . ID ASSIGN expression
    (7) statement -> . PRINT LPAREN expression RPAREN
    (8) statement -> . IF expression block
    (9) statement -> . IF expression block ELSE block
    (10) statement -> . WHILE expression block
    (11) statement -> . FUNCTION ID LPAREN parameters RPAREN block
    (12) statement -> . RETURN expression

    $end            reduce using rule 1 (program -> statements .)
    VAR             shift and go to state 4
    ID              shift and go to state 5
    PRINT           shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FUNCTION        shift and go to state 9
    RETURN          shift and go to state 10

    statement                      shift and go to state 11

state 3

    (3) statements -> statement .

    VAR             reduce using rule 3 (statements -> statement .)
    ID              reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    FUNCTION        reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (5) statement -> VAR . ID ASSIGN expression

    ID              shift and go to state 12


state 5

    (6) statement -> ID . ASSIGN expression

    ASSIGN          shift and go to state 13


state 6

    (7) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 14


state 7

    (8) statement -> IF . expression block
    (9) statement -> IF . expression block ELSE block
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 15

state 8

    (10) statement -> WHILE . expression block
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 20

state 9

    (11) statement -> FUNCTION . ID LPAREN parameters RPAREN block

    ID              shift and go to state 21


state 10

    (12) statement -> RETURN . expression
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 22

state 11

    (2) statements -> statements statement .

    VAR             reduce using rule 2 (statements -> statements statement .)
    ID              reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    FUNCTION        reduce using rule 2 (statements -> statements statement .)
    RETURN          reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    RBRACE          reduce using rule 2 (statements -> statements statement .)


state 12

    (5) statement -> VAR ID . ASSIGN expression

    ASSIGN          shift and go to state 23


state 13

    (6) statement -> ID ASSIGN . expression
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 24

state 14

    (7) statement -> PRINT LPAREN . expression RPAREN
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 25

state 15

    (8) statement -> IF expression . block
    (9) statement -> IF expression . block ELSE block
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . LT expression
    (25) expression -> expression . GT expression
    (26) expression -> expression . LTE expression
    (27) expression -> expression . GTE expression
    (28) expression -> expression . EQUALS expression
    (4) block -> . LBRACE statements RBRACE

    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    TIMES           shift and go to state 29
    DIVIDE          shift and go to state 30
    LT              shift and go to state 31
    GT              shift and go to state 32
    LTE             shift and go to state 33
    GTE             shift and go to state 34
    EQUALS          shift and go to state 35
    LBRACE          shift and go to state 36

    block                          shift and go to state 26

state 16

    (19) expression -> ID . LPAREN arguments RPAREN
    (31) expression -> ID .

    LPAREN          shift and go to state 37
    PLUS            reduce using rule 31 (expression -> ID .)
    MINUS           reduce using rule 31 (expression -> ID .)
    TIMES           reduce using rule 31 (expression -> ID .)
    DIVIDE          reduce using rule 31 (expression -> ID .)
    LT              reduce using rule 31 (expression -> ID .)
    GT              reduce using rule 31 (expression -> ID .)
    LTE             reduce using rule 31 (expression -> ID .)
    GTE             reduce using rule 31 (expression -> ID .)
    EQUALS          reduce using rule 31 (expression -> ID .)
    LBRACE          reduce using rule 31 (expression -> ID .)
    VAR             reduce using rule 31 (expression -> ID .)
    ID              reduce using rule 31 (expression -> ID .)
    PRINT           reduce using rule 31 (expression -> ID .)
    IF              reduce using rule 31 (expression -> ID .)
    WHILE           reduce using rule 31 (expression -> ID .)
    FUNCTION        reduce using rule 31 (expression -> ID .)
    RETURN          reduce using rule 31 (expression -> ID .)
    $end            reduce using rule 31 (expression -> ID .)
    RBRACE          reduce using rule 31 (expression -> ID .)
    RPAREN          reduce using rule 31 (expression -> ID .)
    COMMA           reduce using rule 31 (expression -> ID .)


state 17

    (32) expression -> LPAREN . expression RPAREN
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 38

state 18

    (29) expression -> NUMBER .

    PLUS            reduce using rule 29 (expression -> NUMBER .)
    MINUS           reduce using rule 29 (expression -> NUMBER .)
    TIMES           reduce using rule 29 (expression -> NUMBER .)
    DIVIDE          reduce using rule 29 (expression -> NUMBER .)
    LT              reduce using rule 29 (expression -> NUMBER .)
    GT              reduce using rule 29 (expression -> NUMBER .)
    LTE             reduce using rule 29 (expression -> NUMBER .)
    GTE             reduce using rule 29 (expression -> NUMBER .)
    EQUALS          reduce using rule 29 (expression -> NUMBER .)
    LBRACE          reduce using rule 29 (expression -> NUMBER .)
    VAR             reduce using rule 29 (expression -> NUMBER .)
    ID              reduce using rule 29 (expression -> NUMBER .)
    PRINT           reduce using rule 29 (expression -> NUMBER .)
    IF              reduce using rule 29 (expression -> NUMBER .)
    WHILE           reduce using rule 29 (expression -> NUMBER .)
    FUNCTION        reduce using rule 29 (expression -> NUMBER .)
    RETURN          reduce using rule 29 (expression -> NUMBER .)
    $end            reduce using rule 29 (expression -> NUMBER .)
    RBRACE          reduce using rule 29 (expression -> NUMBER .)
    RPAREN          reduce using rule 29 (expression -> NUMBER .)
    COMMA           reduce using rule 29 (expression -> NUMBER .)


state 19

    (30) expression -> STRING .

    PLUS            reduce using rule 30 (expression -> STRING .)
    MINUS           reduce using rule 30 (expression -> STRING .)
    TIMES           reduce using rule 30 (expression -> STRING .)
    DIVIDE          reduce using rule 30 (expression -> STRING .)
    LT              reduce using rule 30 (expression -> STRING .)
    GT              reduce using rule 30 (expression -> STRING .)
    LTE             reduce using rule 30 (expression -> STRING .)
    GTE             reduce using rule 30 (expression -> STRING .)
    EQUALS          reduce using rule 30 (expression -> STRING .)
    LBRACE          reduce using rule 30 (expression -> STRING .)
    VAR             reduce using rule 30 (expression -> STRING .)
    ID              reduce using rule 30 (expression -> STRING .)
    PRINT           reduce using rule 30 (expression -> STRING .)
    IF              reduce using rule 30 (expression -> STRING .)
    WHILE           reduce using rule 30 (expression -> STRING .)
    FUNCTION        reduce using rule 30 (expression -> STRING .)
    RETURN          reduce using rule 30 (expression -> STRING .)
    $end            reduce using rule 30 (expression -> STRING .)
    RBRACE          reduce using rule 30 (expression -> STRING .)
    RPAREN          reduce using rule 30 (expression -> STRING .)
    COMMA           reduce using rule 30 (expression -> STRING .)


state 20

    (10) statement -> WHILE expression . block
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . LT expression
    (25) expression -> expression . GT expression
    (26) expression -> expression . LTE expression
    (27) expression -> expression . GTE expression
    (28) expression -> expression . EQUALS expression
    (4) block -> . LBRACE statements RBRACE

    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    TIMES           shift and go to state 29
    DIVIDE          shift and go to state 30
    LT              shift and go to state 31
    GT              shift and go to state 32
    LTE             shift and go to state 33
    GTE             shift and go to state 34
    EQUALS          shift and go to state 35
    LBRACE          shift and go to state 36

    block                          shift and go to state 39

state 21

    (11) statement -> FUNCTION ID . LPAREN parameters RPAREN block

    LPAREN          shift and go to state 40


state 22

    (12) statement -> RETURN expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . LT expression
    (25) expression -> expression . GT expression
    (26) expression -> expression . LTE expression
    (27) expression -> expression . GTE expression
    (28) expression -> expression . EQUALS expression

    VAR             reduce using rule 12 (statement -> RETURN expression .)
    ID              reduce using rule 12 (statement -> RETURN expression .)
    PRINT           reduce using rule 12 (statement -> RETURN expression .)
    IF              reduce using rule 12 (statement -> RETURN expression .)
    WHILE           reduce using rule 12 (statement -> RETURN expression .)
    FUNCTION        reduce using rule 12 (statement -> RETURN expression .)
    RETURN          reduce using rule 12 (statement -> RETURN expression .)
    $end            reduce using rule 12 (statement -> RETURN expression .)
    RBRACE          reduce using rule 12 (statement -> RETURN expression .)
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    TIMES           shift and go to state 29
    DIVIDE          shift and go to state 30
    LT              shift and go to state 31
    GT              shift and go to state 32
    LTE             shift and go to state 33
    GTE             shift and go to state 34
    EQUALS          shift and go to state 35


state 23

    (5) statement -> VAR ID ASSIGN . expression
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 41

state 24

    (6) statement -> ID ASSIGN expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . LT expression
    (25) expression -> expression . GT expression
    (26) expression -> expression . LTE expression
    (27) expression -> expression . GTE expression
    (28) expression -> expression . EQUALS expression

    VAR             reduce using rule 6 (statement -> ID ASSIGN expression .)
    ID              reduce using rule 6 (statement -> ID ASSIGN expression .)
    PRINT           reduce using rule 6 (statement -> ID ASSIGN expression .)
    IF              reduce using rule 6 (statement -> ID ASSIGN expression .)
    WHILE           reduce using rule 6 (statement -> ID ASSIGN expression .)
    FUNCTION        reduce using rule 6 (statement -> ID ASSIGN expression .)
    RETURN          reduce using rule 6 (statement -> ID ASSIGN expression .)
    $end            reduce using rule 6 (statement -> ID ASSIGN expression .)
    RBRACE          reduce using rule 6 (statement -> ID ASSIGN expression .)
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    TIMES           shift and go to state 29
    DIVIDE          shift and go to state 30
    LT              shift and go to state 31
    GT              shift and go to state 32
    LTE             shift and go to state 33
    GTE             shift and go to state 34
    EQUALS          shift and go to state 35


state 25

    (7) statement -> PRINT LPAREN expression . RPAREN
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . LT expression
    (25) expression -> expression . GT expression
    (26) expression -> expression . LTE expression
    (27) expression -> expression . GTE expression
    (28) expression -> expression . EQUALS expression

    RPAREN          shift and go to state 42
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    TIMES           shift and go to state 29
    DIVIDE          shift and go to state 30
    LT              shift and go to state 31
    GT              shift and go to state 32
    LTE             shift and go to state 33
    GTE             shift and go to state 34
    EQUALS          shift and go to state 35


state 26

    (8) statement -> IF expression block .
    (9) statement -> IF expression block . ELSE block

    VAR             reduce using rule 8 (statement -> IF expression block .)
    ID              reduce using rule 8 (statement -> IF expression block .)
    PRINT           reduce using rule 8 (statement -> IF expression block .)
    IF              reduce using rule 8 (statement -> IF expression block .)
    WHILE           reduce using rule 8 (statement -> IF expression block .)
    FUNCTION        reduce using rule 8 (statement -> IF expression block .)
    RETURN          reduce using rule 8 (statement -> IF expression block .)
    $end            reduce using rule 8 (statement -> IF expression block .)
    RBRACE          reduce using rule 8 (statement -> IF expression block .)
    ELSE            shift and go to state 43


state 27

    (20) expression -> expression PLUS . expression
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 44

state 28

    (21) expression -> expression MINUS . expression
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 45

state 29

    (22) expression -> expression TIMES . expression
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 46

state 30

    (23) expression -> expression DIVIDE . expression
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 47

state 31

    (24) expression -> expression LT . expression
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 48

state 32

    (25) expression -> expression GT . expression
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 49

state 33

    (26) expression -> expression LTE . expression
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 50

state 34

    (27) expression -> expression GTE . expression
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 51

state 35

    (28) expression -> expression EQUALS . expression
    (19) expression -> . ID LPAREN arguments RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LTE expression
    (27) expression -> . expression GTE expression
    (28) expression -> . expression EQUALS expression
    (29) expression -> . NUMBER
    (30) expression -> . STRING
    (31) expression -> . ID
    (32) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 16
    NUMBER          shift and go to state 18
    STRING          shift and go to state 19
    LPAREN          shift and go to state 17

    expression                     shift and go to state 52

state 36

    (4) block -> LBRACE . statements RBRACE
    (2) statements -> . statements statement
    (3) statements -> . statement
    (5) statement -> . VAR ID ASSIGN expression
    (6) statement -> . ID ASSIGN expression
    (7) statement -> . PRINT LPAREN expression RPAREN
    (8) statement -> . IF expression block
    (9) statement -> . IF expression block ELSE block
    (10) statement -> . WHILE expression block
    (11) statement -> . FUNCTION ID LPAREN parameters RPAREN block
    (12) statement -> . RETURN expression
